--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p class="msg">올해는 몸과 맘 모두 꼭!~건강하자!</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t5 center done">코딩 더 깊이 배우기</div>
-        <div class="bucket img2-t5 center">대학교 공부하기</div>
+        <div class="bucket img2-t5 center done">대학교 공부하기</div>
         <div class="bucket img1-t5 center">건강하게 생활하기</div>
         <div class="bucket img1-t5 center">유튜브 꾸준히 운영하기</div>
         <div class="bucket img1-t5 center">희영이 잘 해결하기</div>
